--- a/styles.css
+++ b/styles.css
@@ -13,6 +13,8 @@ body {
     color: rgb(65, 209, 149);
     text-align: center;
     height: 100vh;
+    transition: all 0.7s ease 0s;
+    transform: translateY(0%);
 }
 
 .header .img {
@@ -47,16 +49,15 @@ body {
     background: rgba(31, 125, 184, 0.95);
     color: #fff;
     visibility: hidden  ;
-    opacity: 0;
-  
-    /* transition effect. not necessary */
-    transition: opacity .25s, visibility .5s;
-    /* -webkit-transition: opacity .25s ease-in-out; */
+    opacity: 0.5;
 }
 
 .card:hover .card-body {
     visibility: visible;
     opacity: 1;
+    transform: scale(1.10);
+    transition: 0.5s;
+    z-index: 10;
   }
 
  .card ul a:visited {
