--- a/styles.css
+++ b/styles.css
@@ -19,7 +19,7 @@ body {
 
 .header .img {
     width: 100%;
-    height: 90vh;
+    height: 100vh;
 }
 
 .container .row .card {
@@ -29,35 +29,40 @@ body {
 }
 
 .footer {
-    background: #669aff;
+    background: rgb(25,25,25);
     padding: 1em;
 }
 
 .card {
-    position: relative;
-    height: 350px;
+    text-align: center;	
+	position: relative;
+	cursor: pointer;	
+	perspective: 500px; 
+}
+.card img{
     width: 250px;
-    text-align: center;
+	height: 300px;
 }
 
-.card-body {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background: rgba(31, 125, 184, 0.95);
-    color: #fff;
-    visibility: hidden  ;
-    opacity: 0.5;
+.card .card-body {
+    width: 350px;
+	height: 100%;	
+	padding: 5% 8%;
+	position: absolute;
+	content: "";
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%) rotateY(90deg);
+	transform-origin: 50%;
+	background: rgba(255,255,255,0.9);	
+	opacity: 0;
+	transition: all 0.4s ease-in;
 }
 
 .card:hover .card-body {
-    visibility: visible;
-    opacity: 1;
-    transform: scale(1.10);
-    transition: 0.5s;
-    z-index: 10;
+    
+    transform: translate(-50%, -50%) rotateY(0deg);
+	opacity: 1;
   }
 
  .card ul a:visited {
@@ -105,5 +110,5 @@ body {
 
 .fade-in {
     opacity: 0;
-    animation: fadeIn 2s, ease-in-out forwards;
+    animation: fadeIn 3s, ease-in-out forwards;
 }
